--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite build --watch",
     "build": "vite build",
     "wp-start": "wp-env start",
     "wp-stop": "wp-env stop",
@@ -15,6 +15,7 @@
   "license": "ISC",
   "devDependencies": {
     "@wordpress/env": "^10.30.0",
+    "sass": "^1.92.1",
     "vite": "^7.1.5"
   }
 }
