--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@wordpress/env": "^10.30.0",
     "sass": "^1.92.1",
-    "vite": "^7.1.5"
+    "vite": "^7.1.5",
+    "vite-plugin-live-reload": "^3.0.5"
   }
 }
